adiciona formularios para cadastro de carros com ModelForm do django

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'cars_list' %}">Carros</a></li>
+        <li><a href="{% url 'new_car' %}">Cadastrar Carro</a></li>
       </ul>
     </nav>
   </header>
@@ -83,7 +84,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 PycodeBR Multimarcas</p>
+    <p>&copy; 2024 PycodeBR Multimarcas</p>
   </footer>
 </body>
 </html>
